package com.diguage.didp.interpreter;

/**
 * AbstractExpression 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:35
 */
public abstract class AbstractExpression {
  public abstract void interpret(Context context);
}
